apisvr example: CURD tags

--- a/cmd/apisvr/app.ini
+++ b/cmd/apisvr/app.ini
@@ -19,3 +19,22 @@ LogSavePath = logs/
 LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
+
+
+
+[database]
+Type = mysql
+User = root
+Password = toor
+Host = 127.0.0.1:3306
+Name = blog
+TablePrefix = blog_
+
+
+
+[redis]
+Host = 127.0.0.1:6379
+Password = foobared
+MaxIdle = 30
+MaxActive = 30
+IdleTimeout = 200
