Melody example and mqtt example

--- a/cmd/apisvr/app.ini
+++ b/cmd/apisvr/app.ini
@@ -6,6 +6,23 @@ ReadTimeout = 60
 WriteTimeout = 60
 
 
+[database]
+Type = mysql
+User = root
+Password = toor
+Host = 127.0.0.1:3306
+Name = blog
+TablePrefix = blog_
+
+
+[redis]
+Host = 127.0.0.1:6379
+Password = foobared
+MaxIdle = 30
+MaxActive = 30
+IdleTimeout = 200
+
+
 [app]
 PrefixUrl = http://127.0.0.1:8000
 
@@ -20,21 +37,4 @@ LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
 
-
-
-[database]
-Type = mysql
-User = root
-Password = toor
-Host = 127.0.0.1:3306
-Name = blog
-TablePrefix = blog_
-
-
-
-[redis]
-Host = 127.0.0.1:6379
-Password = foobared
-MaxIdle = 30
-MaxActive = 30
-IdleTimeout = 200
+PageSize = 10
